--- a/grabbit/app/build.gradle
+++ b/grabbit/app/build.gradle
@@ -40,5 +40,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.1'
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.6.0'
+    implementation ('com.paytm:pgplussdk:1.3.3') {
+        transitive = true
+    }
 
 }
