--- a/grabbit/app/src/main/AndroidManifest.xml
+++ b/grabbit/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
         <activity
             android:name=".MainActivity"
             android:theme="@style/SplashTheme" />
+        <activity android:name="com.paytm.pgsdk.PaytmPGActivity"
+            android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation|keyboard"/>
+
     </application>
 
 </manifest>
