--- a/grabbit/app/src/main/AndroidManifest.xml
+++ b/grabbit/app/src/main/AndroidManifest.xml
@@ -3,10 +3,11 @@
     package="com.example.grabbit">
 
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.READ_SMS"/>
-    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,27 +15,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/MaterialTheme">
-        <activity android:name=".ProfileActivity"></activity>
-        <activity android:name=".CartActivity" >
+        <activity android:name=".bnhome.HomeBnActivity"></activity>
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".CartActivity">
+
+        </activity>
+        <activity android:name=".home.HomeActivity" />
+        <activity android:name=".Signup.SignupActivity" />
+        <activity android:name=".SplashscreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".home.HomeActivity" />
-        <activity android:name=".Signup.SignupActivity" />
-        <activity android:name=".SplashscreenActivity">
-
-        </activity>
         <activity android:name=".scanner.QrScannerActivity" />
         <activity android:name=".login.LoginActivity" />
         <activity
             android:name=".MainActivity"
             android:theme="@style/SplashTheme" />
-        <activity android:name="com.paytm.pgsdk.PaytmPGActivity"
-            android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation|keyboard"/>
-
+        <activity
+            android:name="com.paytm.pgsdk.PaytmPGActivity"
+            android:configChanges="keyboardHidden|orientation|keyboard"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
