--- a/grabbit/app/build.gradle
+++ b/grabbit/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
         transitive = true
     }
 
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
 }
