--- a/grabbit/app/src/main/AndroidManifest.xml
+++ b/grabbit/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.grabbit">
 
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -15,7 +17,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/MaterialTheme">
-        <activity android:name=".bnhome.HomeBnActivity"></activity>
+        <activity android:name=".bluetooth.ItemDispenseActivity"></activity>
+        <activity android:name=".bluetooth.ScanBluetoothDevices" />
+        <activity android:name=".bnhome.HomeBnActivity" />
         <activity android:name=".Signup.SignupActivity" />
         <activity android:name=".SplashscreenActivity">
             <intent-filter>
