information activity added small changes on cart and main view

--- a/grabbit/app/src/main/AndroidManifest.xml
+++ b/grabbit/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:theme="@style/MaterialTheme">
         <activity android:name=".bluetooth.ItemDispenseActivity"></activity>
         <activity android:name=".bluetooth.ScanBluetoothDevices" />
+        <activity android:name=".scanner.InformationActivity"></activity>
         <activity android:name=".bnhome.HomeBnActivity" />
         <activity android:name=".Signup.SignupActivity" />
         <activity android:name=".SplashscreenActivity">
