--- a/grabbit/app/build.gradle
+++ b/grabbit/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation "com.android.support:design:$support_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation "com.android.support:cardview-v7:$support_version"
+    //add gif animation
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.18'
     //Added for network library
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.1'
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
