--- a/grabbit/app/src/main/AndroidManifest.xml
+++ b/grabbit/app/src/main/AndroidManifest.xml
@@ -11,15 +11,18 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
     <application
+        android:noHistory="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/MaterialTheme">
-        <activity android:name=".bluetooth.ItemDispenseActivity"></activity>
+        <activity android:name=".bluetooth.ItemDispenseActivity">
+        </activity>
         <activity android:name=".bluetooth.ScanBluetoothDevices" />
-        <activity android:name=".scanner.InformationActivity"></activity>
+        <activity android:name=".scanner.InformationActivity">
+        </activity>
         <activity android:name=".bnhome.HomeBnActivity" />
         <activity android:name=".Signup.SignupActivity" />
         <activity android:name=".SplashscreenActivity">
