--- a/grabbit/app/src/main/AndroidManifest.xml
+++ b/grabbit/app/src/main/AndroidManifest.xml
@@ -11,37 +11,48 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
     <application
-        android:usesCleartextTraffic="true"
-        android:noHistory="true"
+        android:screenOrientation="portrait"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:noHistory="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/MaterialTheme">
-        <activity android:name=".bluetooth.ItemDispenseActivity">
-        </activity>
-        <activity android:name=".bluetooth.ScanBluetoothDevices" />
-        <activity android:name=".scanner.InformationActivity">
-        </activity>
-        <activity android:name=".bnhome.HomeBnActivity" />
-        <activity android:name=".Signup.SignupActivity" />
-        <activity android:name=".SplashscreenActivity">
+        android:theme="@style/MaterialTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".paytm.TransactionPaytm"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".bluetooth.ItemDispenseActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".bluetooth.ScanBluetoothDevices"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".scanner.InformationActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".bnhome.HomeBnActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Signup.SignupActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".SplashscreenActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".scanner.QrScannerActivity" />
-        <activity android:name=".login.LoginActivity" />
+        <activity android:name=".scanner.QrScannerActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".login.LoginActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".MainActivity"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/SplashTheme"
+            android:screenOrientation="portrait"/>
         <activity
             android:name="com.paytm.pgsdk.PaytmPGActivity"
             android:configChanges="keyboardHidden|orientation|keyboard"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            />
     </application>
 
 </manifest>
