--- a/grabbit/app/src/main/AndroidManifest.xml
+++ b/grabbit/app/src/main/AndroidManifest.xml
@@ -11,28 +11,35 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
     <application
-        android:screenOrientation="portrait"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:noHistory="true"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/MaterialTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".paytm.TransactionPaytm"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".bluetooth.ItemDispenseActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".bluetooth.ScanBluetoothDevices"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".scanner.InformationActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".bnhome.HomeBnActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Signup.SignupActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".SplashscreenActivity"
+        <activity
+            android:name=".paytm.TransactionPaytm"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".bluetooth.ItemDispenseActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".bluetooth.ScanBluetoothDevices"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".scanner.InformationActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".bnhome.HomeBnActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Signup.SignupActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".SplashscreenActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,19 +47,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".scanner.QrScannerActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".login.LoginActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".scanner.QrScannerActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".login.LoginActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
-            android:theme="@style/SplashTheme"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashTheme" />
         <activity
             android:name="com.paytm.pgsdk.PaytmPGActivity"
             android:configChanges="keyboardHidden|orientation|keyboard"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
