Refactored sign up bug now sending text, added recursive api call logic for create invoice service, added suspend function keepclassmember function

--- a/grabbit/app/src/main/AndroidManifest.xml
+++ b/grabbit/app/src/main/AndroidManifest.xml
@@ -34,18 +34,19 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".bnhome.HomeBnActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".Signup.SignupActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".SplashscreenActivity"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".scanner.QrScannerActivity"
