--- a/grabbit/app/src/main/AndroidManifest.xml
+++ b/grabbit/app/src/main/AndroidManifest.xml
@@ -18,8 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
-        android:theme="@style/MaterialTheme"
-        android:usesCleartextTraffic="true">
+        android:theme="@style/MaterialTheme">
         <activity android:name=".scanner.TransactionDetailsPage"
             android:theme="@style/MaterialTheme">
         </activity>
