added amount adding functionality for recharge from cart page and information activity page

--- a/grabbit/app/src/main/AndroidManifest.xml
+++ b/grabbit/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
             android:theme="@style/MaterialTheme">
         </activity>
         <activity
-            android:name=".Signup.SignupActivity"
+            android:name=".signup.SignupActivity"
             android:screenOrientation="portrait"
             android:theme="@style/MaterialTheme"/>
         <activity
