Added operator product list api integration along with view

--- a/grabbit/app/src/main/AndroidManifest.xml
+++ b/grabbit/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
         android:supportsRtl="true"
         android:theme="@style/MaterialTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".operator.OperatorProductListing"></activity>
+        <activity android:name=".operator.OperatorProductListing">
+
+        </activity>
         <activity
             android:name=".scanner.TransactionDetailsPage"
             android:theme="@style/MaterialTheme"></activity>
@@ -43,7 +45,13 @@
         <activity
             android:name=".bnhome.HomeBnActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/MaterialTheme"></activity>
+            android:theme="@style/MaterialTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".signup.SignupActivity"
             android:screenOrientation="portrait"
@@ -52,11 +60,6 @@
             android:name=".splash_screen.SplashscreenActivity"
             android:screenOrientation="portrait"
             android:theme="@style/MaterialTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".scanner.QrScannerActivity"
